--- a/Blog.html
+++ b/Blog.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="fb_bs.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.  min.js"></script>
+    <script src="js.js" type="text/javascript">
+    </script>
   </head>
 
 <body>
   <a name="top"></a>
- <nav class="navbar navbar-default navbar-transparent navbar-fixed-top" color-on-scroll="200">
+ <nav class="navbar navbar-default navbar-fixed-top scrolled" style="background-color:transparent; border:0;">
       <div class="container-fluid">
         <div class="navbar-header">
           <a href="#" class="navbar-brand">Me<strong>BLOG</strong></a>
@@ -32,11 +34,11 @@
         </div>
       </div>
     </nav>
-    <div class="parallax1" style="margin-top:-20px;">
+    <div id="parallax1">
       <br><br><br><br><br><br><br><br>
       <div class="jumbotron text-center" style="background-color:transparent">
         <!--Fureza ilimitado-->
-        <h1 class="font_sherlock" style="text-shadow: 2px 2px 3px #FF0000, 0 0 5px #0000FF; opacity:0.5;">FUREZA ILITIMADO</h1>
+        <h1 class="font_sherlock" style="text-shadow: 2px 2px 3px #FF0000, 0 0 5px #0000FF;">FUREZA ILITIMADO</h1>
         <br><h5 class="font_angrybird" style="margin-top:-30px; color:purple;">(Strength Unlimited)</h5>
       </div>
     </div>
@@ -234,7 +236,7 @@
       </div>
     </div>
 
-    <footer style="margin-top:-26px; margin-bottom:-30px;">
+    <footer style="margin-top:-26px; border:0;">
       <div class="jumbotron text-center" style="background-color:gray;">
         <br>
         <a href="#top">
